hero background beautification

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   src: url('./fonts/Nunito/Nunito-Regular.ttf');
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .fontNunitoRegular {
   font-family: nunitoRegular;
 }
